Fixed alignment

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -452,7 +452,6 @@ footer .footer-below {
     height: 75px;
     background-color: transparent;
     cursor: pointer;
-    text-align: center;
 }
 
 .portfolio-modal .close-modal:hover {
